Working Version, still need to add input check

--- a/Jiyuan_Zhao_Lab5/src/UserInterface/MainJFrame.form
+++ b/Jiyuan_Zhao_Lab5/src/UserInterface/MainJFrame.form
@@ -52,7 +52,7 @@
                           <Component id="adminButton1" alignment="1" max="32767" attributes="1"/>
                           <Component id="customerButton3" alignment="1" max="32767" attributes="1"/>
                       </Group>
-                      <EmptySpace pref="13" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -90,7 +90,6 @@
             <Component class="javax.swing.JButton" name="customerButton3">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Customer Role"/>
-                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="customerButton3ActionPerformed"/>
